--- a/app/index-simple.html
+++ b/app/index-simple.html
@@ -3,19 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <title>Simple Video Player</title>
-    <link rel="stylesheet" href="./dist/style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script>
+
+        function onReady(e) {
+          var videoFigureTag = document.getElementById("video_player");
+          var videoTag= document.querySelector("#video_player video");
+          var sourceTag= document.querySelector("#video_player video source");
+          // var sourceTag02= document.querySelector("#video_player video source source");
+          var getAnchors= document.getElementsByTagName("a");
+          var getAllAnchors= document.querySelectorAll ("#video_player figcaption a");
+
+            console.log (videoFigureTag);
+            console.log (videoTag);
+            console.log (sourceTag);
+            //console.log (sourceTag02);
+            console.log (getAnchors);
+            console.log (getAllAnchors);
+
+            //loop to print all the links in the anchor tag
+            //ai is the anchor index
+            for (var ai= 0; ai<getAnchors.length; ai++) {
+            console.log(getAnchors[ai].getAttribute("href"));
+
+            var currentAnchor= getAnchors[ai];
+            currentAnchor.addEventListener("click",onAnchorClick, false);
+            }
+
+        }
+        function onAnchorClick (e){
+          e.preventDefault();  /*prevent default prevent the default action, in the current eg the preventDefault prevents the video from opening in a new windown when we click on play */
+
+          var video =document.querySelector ("#video_player video");
+          video.removeAttribute("controls");
+          video.removeAttribute("poster");
+          /*removing the control attribute the play and pause control of the video so that it plays continously
+          removing poster prevents us from skiiping the scenes of the video (thumbnails of the video skip the scenes and goes to the scene to the thumbnail scene we clicked on) */
+          /* thumbnail:- its wrappd in an anchor tag*/
+          /* anchor tag contains the file of the name in this case its the image */
+
+          var currentElement = e.target; //img
+          var currentLink= e.target.parentElement; //anchor
+          console.log (currentLink);
+
+          var currentHref = currentLink.getAttribute("href");
+          /* gets the href value */
+          var source= document.querySelectorAll("#video_player video source");
+          source [0].src= currentHref;
+          video.load(); //retrieves the file
+          video.play(); //plays the video
+        }
+          window.addEventListener("load",onReady,false);
+
+    </script>
 </head>
 <body>
 <h1>Welcome to My Video Player</h1>
 <figure id="video_player">
     <video controls poster="./images/nambia1.jpg">
-        <source src="./videos/nambia1.mp4" type="video/mp4">
-        <source src="./videos/nambia1.webm" type="video/webm">
+        <source src="./media/nambia1.mp4" type="video/mp4">
+        <source src="./media/nambia1.webm" type="video/webm">
     </video>
     <figcaption>
-        <a href="./videos/nambia1.mp4"><img src="./images/nambia1.jpg" alt="Nambia Timelapse 1"></a>
-        <a href="./videos/nambia2.mp4"><img src="./images/nambia2.jpg" alt="Nambia Timelapse 2"></a>
-        <a href="./videos/nambia3.mp4"><img src="./images/nambia3.jpg" alt="Nambia Timelapse 3"></a>
+        <a href="./media/nambia1.mp4"><img src="./images/nambia1.jpg" alt="Nambia Timelapse 1"></a>
+        <a href="./media/nambia2.mp4"><img src="./images/nambia2.jpg" alt="Nambia Timelapse 2"></a>
+        <a href="./media/nambia3.mp4"><img src="./images/nambia3.jpg" alt="Nambia Timelapse 3"></a>
     </figcaption>
 </figure>
 
